using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace CarGame
{
    public class VehicleSpawner : MonoBehaviour
    {
    
    }
}
